--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
 			<button id="calculate-lots-btn" class="button">Calculate Lot Size</button>
 
-			<div id="lots-result-container" class="result hidden">
+			<div id="lots-result-container" class="result">
 				<div class="result-line">
 					<span class="result-label">Calculated Lot Size</span>
 					<span id="lots-result-text" class="result-value neutral">—</span>
@@ -340,6 +340,10 @@
 				<div class="result-line">
 					<span class="result-label">Amount at Risk</span>
 					<span id="risk-amount-text" class="result-value neutral">—</span>
+				</div>
+				<div class="result-line">
+					<span class="result-label">Required Leverage</span>
+					<span id="leverage-result-text" class="result-value neutral">—</span>
 				</div>
 			</div>
 			<div id="lots-loader" class="spinner"></div>
@@ -377,6 +381,7 @@
 			const lotsResultContainer = getEl('lots-result-container');
 			const lotsResultText = getEl('lots-result-text');
 			const riskAmountText = getEl('risk-amount-text');
+			const leverageResultText = getEl('leverage-result-text');
 			const lotsLoader = getEl('lots-loader');
 
 			const currencies = { 
@@ -431,7 +436,9 @@
 				}
 
 				lotsLoader.style.display = 'flex';
-				lotsResultContainer.classList.add('hidden');
+					lotsResultText.textContent = '—';
+					riskAmountText.textContent = '—';
+					leverageResultText.textContent = '—';
 
 				try {
 					const response = await fetch(`https://api.exchangerate-api.com/v4/latest/${quoteCcy}`);
@@ -447,9 +454,18 @@
 					const pipValue = tickValue * conversionRate;
 					const lotSize = riskAmount / (stopLossPips * pipValue * contractSize);
 
+					// Calculate required leverage
+					const totalTradeValueQuote = lotSize * contractSize * entryPrice;
+					const totalTradeValueAccount = totalTradeValueQuote * (rates[accountCurrency] || 1);
+					
+					let requiredLeverage = 0;
+					if (accountBalance > 0 && totalTradeValueAccount > 0) {
+						requiredLeverage = totalTradeValueAccount / accountBalance;
+					}
+
 					lotsResultText.textContent = `${lotSize.toFixed(2)}`;
 					riskAmountText.textContent = `${formatMoney(riskAmount, accountCurrency)}`;
-					lotsResultContainer.classList.remove('hidden');
+					leverageResultText.textContent = requiredLeverage > 0 ? `1:${Math.ceil(requiredLeverage)}` : '—';
 				} catch (error) {
 					console.error('Error calculating lot size:', error);
 					alert('Failed to fetch exchange rates. Please try again later.');
